<resources>
    <string name="app_name">AppMovieFinally</string>
    <string name="movies">Movies</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="popular_movie">Popular Movie</string>
    <string name="popular_tv">Popular TV</string>
    <string name="upcoming">Upcoming</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="remainder">Remainder</string>
    <string name="edit">Edit</string>
    <string name="sex">Male</string>
    <string name="birthday">01/25/1997</string>
    <string name="kynv1_fsoft_com_vn">KyNV1@fsoft.com.vn</string>
    <string name="cancel">Cancel</string>
    <string name="sample_gmail_com">sample@gmail.com</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="nguyen_anh_ky">nguyen anh ky</string>
    <string name="_24_12_1997">24/12/1997</string>
    <string name="reminder">Reminder</string>
    <string name="show_all">Show All</string>
    <string name="ant_man">Ant-Man</string>
    <string name="release">Release:</string>
    <string name="_2015_08_14">2015-08-14</string>
    <string name="_7_0_10">7.0/10</string>
    <string name="rating">Rating:</string>
    <string name="over1">Armed with the astonishing ability to shrink in scale but increase in strendle, con-man Scott Lang must embrace his inner-hero and help his mentor, Dr...</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release date:</string>
    <string name="_2015_06_12">2015-06-12</string>
    <string name="OverViewJurassicWorld">Twenty-two year after the events of jurassic Park, ISla Nublar now features a fully functioning dinosaur theme park, jurassic World, as originally envisioned by John Hammond.</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movie_with_rate_from">Movie with rate from</string>
    <string name="_5">5</string>
    <string name="from_release">From Release</string>
    <string name="_2015">2015</string>
    <string name="sort_by">Sort By</string>
    <string name="relase_date">Relase Date</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="now_playing_moives">Now Playing Moives</string>
    <string name="rating1">Rating</string>
    <string name="top_rate_movies">Top Rate Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="sort">Sort</string>
    <string name="spectre">Spectre</string>
    <string name="_1970">1970</string>
    <string name="_6_3">6.3</string>
    <string name="_2015_11_28">2015/11/28</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>