<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edtFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/edtFilter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtItemCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_movies" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutMovieWithRateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layoutCategory">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_with_rate_from"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNumberOfStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFromReleaseYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layoutMovieWithRateFrom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_release"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2015" />
        </LinearLayout>

        <TextView
            android:id="@+id/edtSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sort"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutFromReleaseYear" />

        <LinearLayout
            android:id="@+id/layoutSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/edtSort">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtItemSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relase_date" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>