<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitleMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spectre"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1970"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txtTopRateMovie"
        app:layout_constraintStart_toEndOf="@+id/txtTitleMovie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTopRateMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtReminderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2015_11_28"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTopRateMovie" />

    <TextView
        android:id="@+id/txtReminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2015_11_28"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txtTopRateMovie"
        app:layout_constraintStart_toEndOf="@id/txtReminderDate"
        app:layout_constraintTop_toBottomOf="@id/txtTopRateMovie" />


</androidx.constraintlayout.widget.ConstraintLayout>