<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idCVCOurseItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#E6E6FA"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitleMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/spectre"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/imgAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1970"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/txtTopRateMovie"
            app:layout_constraintStart_toEndOf="@+id/txtTitleMovie"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTopRateMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/_2015_11_28"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/imgAvatar"
            app:layout_constraintTop_toBottomOf="@id/txtTopRateMovie" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>